<resources>
    <string name="app_name">Essential Equestrian App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title"> Essential Equine App</string>
    <string name="The_world_of_android">Made by Steven Koski</string>
    <string name="hello_Admin">Welcome admin, you are friend</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="login">Login</string>
    <string name="new_account_prompt">Don\'t have an account? Click to signs up!</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="other">Other</string>
    <string name="explore">Explore</string>
    <string name="settings">Settings</string>
    <string name="Records">Records</string>
    <string name="default_article_name">Article Name</string>
    <string name="events_header">Upcoming Events</string>
    <string name="sample_date">44st</string>
    <string name="sample_event_name">Event Name :D</string>
    <string name="sample_time">12:05PM</string>
    <string name="sample_horse">Green Mouse</string>
    <string name="sample_score">71.6%</string>
    <string name="sample_test_name">Intro Test B</string>
    <string name="sample_date_long">07/28/2019</string>

</resources>
