<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@color/beige"
    android:layout_margin="2dp"
    android:padding="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/test_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_test_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/test_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/sample_score"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/test_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/horse_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sample_horse"
            app:layout_constraintStart_toEndOf="@+id/test_score"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/test_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_date_long"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>